parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    ELIF

Grammar

Rule 0     S' -> start
Rule 1     start -> bloc
Rule 2     bloc -> bloc statement SEMICOLON
Rule 3     bloc -> statement SEMICOLON
Rule 4     statement -> NAME EGAL expression
Rule 5     statement -> PRINT LPAREN expression RPAREN
Rule 6     expression -> expression PLUS expression
Rule 7     expression -> expression MINUS expression
Rule 8     expression -> expression TIMES expression
Rule 9     expression -> expression DIVIDE expression
Rule 10    expression -> LPAREN expression RPAREN
Rule 11    expression -> NUMBER
Rule 12    expression -> NAME
Rule 13    statement -> LACC bloc RACC
Rule 14    statement -> IF LPAREN expression RPAREN statement
Rule 15    statement -> IF LPAREN expression RPAREN statement ELSE statement
Rule 16    statement -> WHILE LPAREN expression RPAREN statement
Rule 17    statement -> FOR LPAREN statement SEMICOLON expression SEMICOLON statement RPAREN statement
Rule 18    expression -> expression EGALEGAL expression
Rule 19    expression -> expression INF expression
Rule 20    expression -> expression SUP expression
Rule 21    expression -> expression INFEG expression
Rule 22    expression -> expression SUPFEG expression

Terminals, with rules where they appear

DIVIDE               : 9
EGAL                 : 4
EGALEGAL             : 18
ELIF                 : 
ELSE                 : 15
FOR                  : 17
IF                   : 14 15
INF                  : 19
INFEG                : 21
LACC                 : 13
LPAREN               : 5 10 14 15 16 17
MINUS                : 7
NAME                 : 4 12
NUMBER               : 11
PLUS                 : 6
PRINT                : 5
RACC                 : 13
RPAREN               : 5 10 14 15 16 17
SEMICOLON            : 2 3 17 17
SUP                  : 20
SUPFEG               : 22
TIMES                : 8
WHILE                : 16
error                : 

Nonterminals, with rules where they appear

bloc                 : 1 2 13
expression           : 4 5 6 6 7 7 8 8 9 9 10 14 15 16 17 18 18 19 19 20 20 21 21 22 22
start                : 0
statement            : 2 3 14 15 15 16 17 17 17

Parsing method: LALR

state 0

    (0) S' -> . start
    (1) start -> . bloc
    (2) bloc -> . bloc statement SEMICOLON
    (3) bloc -> . statement SEMICOLON
    (4) statement -> . NAME EGAL expression
    (5) statement -> . PRINT LPAREN expression RPAREN
    (13) statement -> . LACC bloc RACC
    (14) statement -> . IF LPAREN expression RPAREN statement
    (15) statement -> . IF LPAREN expression RPAREN statement ELSE statement
    (16) statement -> . WHILE LPAREN expression RPAREN statement
    (17) statement -> . FOR LPAREN statement SEMICOLON expression SEMICOLON statement RPAREN statement

    NAME            shift and go to state 4
    PRINT           shift and go to state 5
    LACC            shift and go to state 6
    IF              shift and go to state 7
    WHILE           shift and go to state 8
    FOR             shift and go to state 9

    start                          shift and go to state 1
    bloc                           shift and go to state 2
    statement                      shift and go to state 3

state 1

    (0) S' -> start .



state 2

    (1) start -> bloc .
    (2) bloc -> bloc . statement SEMICOLON
    (4) statement -> . NAME EGAL expression
    (5) statement -> . PRINT LPAREN expression RPAREN
    (13) statement -> . LACC bloc RACC
    (14) statement -> . IF LPAREN expression RPAREN statement
    (15) statement -> . IF LPAREN expression RPAREN statement ELSE statement
    (16) statement -> . WHILE LPAREN expression RPAREN statement
    (17) statement -> . FOR LPAREN statement SEMICOLON expression SEMICOLON statement RPAREN statement

    $end            reduce using rule 1 (start -> bloc .)
    NAME            shift and go to state 4
    PRINT           shift and go to state 5
    LACC            shift and go to state 6
    IF              shift and go to state 7
    WHILE           shift and go to state 8
    FOR             shift and go to state 9

    statement                      shift and go to state 10

state 3

    (3) bloc -> statement . SEMICOLON

    SEMICOLON       shift and go to state 11


state 4

    (4) statement -> NAME . EGAL expression

    EGAL            shift and go to state 12


state 5

    (5) statement -> PRINT . LPAREN expression RPAREN

    LPAREN          shift and go to state 13


state 6

    (13) statement -> LACC . bloc RACC
    (2) bloc -> . bloc statement SEMICOLON
    (3) bloc -> . statement SEMICOLON
    (4) statement -> . NAME EGAL expression
    (5) statement -> . PRINT LPAREN expression RPAREN
    (13) statement -> . LACC bloc RACC
    (14) statement -> . IF LPAREN expression RPAREN statement
    (15) statement -> . IF LPAREN expression RPAREN statement ELSE statement
    (16) statement -> . WHILE LPAREN expression RPAREN statement
    (17) statement -> . FOR LPAREN statement SEMICOLON expression SEMICOLON statement RPAREN statement

    NAME            shift and go to state 4
    PRINT           shift and go to state 5
    LACC            shift and go to state 6
    IF              shift and go to state 7
    WHILE           shift and go to state 8
    FOR             shift and go to state 9

    bloc                           shift and go to state 14
    statement                      shift and go to state 3

state 7

    (14) statement -> IF . LPAREN expression RPAREN statement
    (15) statement -> IF . LPAREN expression RPAREN statement ELSE statement

    LPAREN          shift and go to state 15


state 8

    (16) statement -> WHILE . LPAREN expression RPAREN statement

    LPAREN          shift and go to state 16


state 9

    (17) statement -> FOR . LPAREN statement SEMICOLON expression SEMICOLON statement RPAREN statement

    LPAREN          shift and go to state 17


state 10

    (2) bloc -> bloc statement . SEMICOLON

    SEMICOLON       shift and go to state 18


state 11

    (3) bloc -> statement SEMICOLON .

    NAME            reduce using rule 3 (bloc -> statement SEMICOLON .)
    PRINT           reduce using rule 3 (bloc -> statement SEMICOLON .)
    LACC            reduce using rule 3 (bloc -> statement SEMICOLON .)
    IF              reduce using rule 3 (bloc -> statement SEMICOLON .)
    WHILE           reduce using rule 3 (bloc -> statement SEMICOLON .)
    FOR             reduce using rule 3 (bloc -> statement SEMICOLON .)
    $end            reduce using rule 3 (bloc -> statement SEMICOLON .)
    RACC            reduce using rule 3 (bloc -> statement SEMICOLON .)


state 12

    (4) statement -> NAME EGAL . expression
    (6) expression -> . expression PLUS expression
    (7) expression -> . expression MINUS expression
    (8) expression -> . expression TIMES expression
    (9) expression -> . expression DIVIDE expression
    (10) expression -> . LPAREN expression RPAREN
    (11) expression -> . NUMBER
    (12) expression -> . NAME
    (18) expression -> . expression EGALEGAL expression
    (19) expression -> . expression INF expression
    (20) expression -> . expression SUP expression
    (21) expression -> . expression INFEG expression
    (22) expression -> . expression SUPFEG expression

    LPAREN          shift and go to state 21
    NUMBER          shift and go to state 22
    NAME            shift and go to state 19

    expression                     shift and go to state 20

state 13

    (5) statement -> PRINT LPAREN . expression RPAREN
    (6) expression -> . expression PLUS expression
    (7) expression -> . expression MINUS expression
    (8) expression -> . expression TIMES expression
    (9) expression -> . expression DIVIDE expression
    (10) expression -> . LPAREN expression RPAREN
    (11) expression -> . NUMBER
    (12) expression -> . NAME
    (18) expression -> . expression EGALEGAL expression
    (19) expression -> . expression INF expression
    (20) expression -> . expression SUP expression
    (21) expression -> . expression INFEG expression
    (22) expression -> . expression SUPFEG expression

    LPAREN          shift and go to state 21
    NUMBER          shift and go to state 22
    NAME            shift and go to state 19

    expression                     shift and go to state 23

state 14

    (13) statement -> LACC bloc . RACC
    (2) bloc -> bloc . statement SEMICOLON
    (4) statement -> . NAME EGAL expression
    (5) statement -> . PRINT LPAREN expression RPAREN
    (13) statement -> . LACC bloc RACC
    (14) statement -> . IF LPAREN expression RPAREN statement
    (15) statement -> . IF LPAREN expression RPAREN statement ELSE statement
    (16) statement -> . WHILE LPAREN expression RPAREN statement
    (17) statement -> . FOR LPAREN statement SEMICOLON expression SEMICOLON statement RPAREN statement

    RACC            shift and go to state 24
    NAME            shift and go to state 4
    PRINT           shift and go to state 5
    LACC            shift and go to state 6
    IF              shift and go to state 7
    WHILE           shift and go to state 8
    FOR             shift and go to state 9

    statement                      shift and go to state 10

state 15

    (14) statement -> IF LPAREN . expression RPAREN statement
    (15) statement -> IF LPAREN . expression RPAREN statement ELSE statement
    (6) expression -> . expression PLUS expression
    (7) expression -> . expression MINUS expression
    (8) expression -> . expression TIMES expression
    (9) expression -> . expression DIVIDE expression
    (10) expression -> . LPAREN expression RPAREN
    (11) expression -> . NUMBER
    (12) expression -> . NAME
    (18) expression -> . expression EGALEGAL expression
    (19) expression -> . expression INF expression
    (20) expression -> . expression SUP expression
    (21) expression -> . expression INFEG expression
    (22) expression -> . expression SUPFEG expression

    LPAREN          shift and go to state 21
    NUMBER          shift and go to state 22
    NAME            shift and go to state 19

    expression                     shift and go to state 25

state 16

    (16) statement -> WHILE LPAREN . expression RPAREN statement
    (6) expression -> . expression PLUS expression
    (7) expression -> . expression MINUS expression
    (8) expression -> . expression TIMES expression
    (9) expression -> . expression DIVIDE expression
    (10) expression -> . LPAREN expression RPAREN
    (11) expression -> . NUMBER
    (12) expression -> . NAME
    (18) expression -> . expression EGALEGAL expression
    (19) expression -> . expression INF expression
    (20) expression -> . expression SUP expression
    (21) expression -> . expression INFEG expression
    (22) expression -> . expression SUPFEG expression

    LPAREN          shift and go to state 21
    NUMBER          shift and go to state 22
    NAME            shift and go to state 19

    expression                     shift and go to state 26

state 17

    (17) statement -> FOR LPAREN . statement SEMICOLON expression SEMICOLON statement RPAREN statement
    (4) statement -> . NAME EGAL expression
    (5) statement -> . PRINT LPAREN expression RPAREN
    (13) statement -> . LACC bloc RACC
    (14) statement -> . IF LPAREN expression RPAREN statement
    (15) statement -> . IF LPAREN expression RPAREN statement ELSE statement
    (16) statement -> . WHILE LPAREN expression RPAREN statement
    (17) statement -> . FOR LPAREN statement SEMICOLON expression SEMICOLON statement RPAREN statement

    NAME            shift and go to state 4
    PRINT           shift and go to state 5
    LACC            shift and go to state 6
    IF              shift and go to state 7
    WHILE           shift and go to state 8
    FOR             shift and go to state 9

    statement                      shift and go to state 27

state 18

    (2) bloc -> bloc statement SEMICOLON .

    NAME            reduce using rule 2 (bloc -> bloc statement SEMICOLON .)
    PRINT           reduce using rule 2 (bloc -> bloc statement SEMICOLON .)
    LACC            reduce using rule 2 (bloc -> bloc statement SEMICOLON .)
    IF              reduce using rule 2 (bloc -> bloc statement SEMICOLON .)
    WHILE           reduce using rule 2 (bloc -> bloc statement SEMICOLON .)
    FOR             reduce using rule 2 (bloc -> bloc statement SEMICOLON .)
    $end            reduce using rule 2 (bloc -> bloc statement SEMICOLON .)
    RACC            reduce using rule 2 (bloc -> bloc statement SEMICOLON .)


state 19

    (12) expression -> NAME .

    PLUS            reduce using rule 12 (expression -> NAME .)
    MINUS           reduce using rule 12 (expression -> NAME .)
    TIMES           reduce using rule 12 (expression -> NAME .)
    DIVIDE          reduce using rule 12 (expression -> NAME .)
    EGALEGAL        reduce using rule 12 (expression -> NAME .)
    INF             reduce using rule 12 (expression -> NAME .)
    SUP             reduce using rule 12 (expression -> NAME .)
    INFEG           reduce using rule 12 (expression -> NAME .)
    SUPFEG          reduce using rule 12 (expression -> NAME .)
    SEMICOLON       reduce using rule 12 (expression -> NAME .)
    ELSE            reduce using rule 12 (expression -> NAME .)
    RPAREN          reduce using rule 12 (expression -> NAME .)


state 20

    (4) statement -> NAME EGAL expression .
    (6) expression -> expression . PLUS expression
    (7) expression -> expression . MINUS expression
    (8) expression -> expression . TIMES expression
    (9) expression -> expression . DIVIDE expression
    (18) expression -> expression . EGALEGAL expression
    (19) expression -> expression . INF expression
    (20) expression -> expression . SUP expression
    (21) expression -> expression . INFEG expression
    (22) expression -> expression . SUPFEG expression

    SEMICOLON       reduce using rule 4 (statement -> NAME EGAL expression .)
    ELSE            reduce using rule 4 (statement -> NAME EGAL expression .)
    RPAREN          reduce using rule 4 (statement -> NAME EGAL expression .)
    PLUS            shift and go to state 28
    MINUS           shift and go to state 29
    TIMES           shift and go to state 30
    DIVIDE          shift and go to state 31
    EGALEGAL        shift and go to state 32
    INF             shift and go to state 33
    SUP             shift and go to state 34
    INFEG           shift and go to state 35
    SUPFEG          shift and go to state 36


state 21

    (10) expression -> LPAREN . expression RPAREN
    (6) expression -> . expression PLUS expression
    (7) expression -> . expression MINUS expression
    (8) expression -> . expression TIMES expression
    (9) expression -> . expression DIVIDE expression
    (10) expression -> . LPAREN expression RPAREN
    (11) expression -> . NUMBER
    (12) expression -> . NAME
    (18) expression -> . expression EGALEGAL expression
    (19) expression -> . expression INF expression
    (20) expression -> . expression SUP expression
    (21) expression -> . expression INFEG expression
    (22) expression -> . expression SUPFEG expression

    LPAREN          shift and go to state 21
    NUMBER          shift and go to state 22
    NAME            shift and go to state 19

    expression                     shift and go to state 37

state 22

    (11) expression -> NUMBER .

    PLUS            reduce using rule 11 (expression -> NUMBER .)
    MINUS           reduce using rule 11 (expression -> NUMBER .)
    TIMES           reduce using rule 11 (expression -> NUMBER .)
    DIVIDE          reduce using rule 11 (expression -> NUMBER .)
    EGALEGAL        reduce using rule 11 (expression -> NUMBER .)
    INF             reduce using rule 11 (expression -> NUMBER .)
    SUP             reduce using rule 11 (expression -> NUMBER .)
    INFEG           reduce using rule 11 (expression -> NUMBER .)
    SUPFEG          reduce using rule 11 (expression -> NUMBER .)
    SEMICOLON       reduce using rule 11 (expression -> NUMBER .)
    ELSE            reduce using rule 11 (expression -> NUMBER .)
    RPAREN          reduce using rule 11 (expression -> NUMBER .)


state 23

    (5) statement -> PRINT LPAREN expression . RPAREN
    (6) expression -> expression . PLUS expression
    (7) expression -> expression . MINUS expression
    (8) expression -> expression . TIMES expression
    (9) expression -> expression . DIVIDE expression
    (18) expression -> expression . EGALEGAL expression
    (19) expression -> expression . INF expression
    (20) expression -> expression . SUP expression
    (21) expression -> expression . INFEG expression
    (22) expression -> expression . SUPFEG expression

    RPAREN          shift and go to state 38
    PLUS            shift and go to state 28
    MINUS           shift and go to state 29
    TIMES           shift and go to state 30
    DIVIDE          shift and go to state 31
    EGALEGAL        shift and go to state 32
    INF             shift and go to state 33
    SUP             shift and go to state 34
    INFEG           shift and go to state 35
    SUPFEG          shift and go to state 36


state 24

    (13) statement -> LACC bloc RACC .

    SEMICOLON       reduce using rule 13 (statement -> LACC bloc RACC .)
    ELSE            reduce using rule 13 (statement -> LACC bloc RACC .)
    RPAREN          reduce using rule 13 (statement -> LACC bloc RACC .)


state 25

    (14) statement -> IF LPAREN expression . RPAREN statement
    (15) statement -> IF LPAREN expression . RPAREN statement ELSE statement
    (6) expression -> expression . PLUS expression
    (7) expression -> expression . MINUS expression
    (8) expression -> expression . TIMES expression
    (9) expression -> expression . DIVIDE expression
    (18) expression -> expression . EGALEGAL expression
    (19) expression -> expression . INF expression
    (20) expression -> expression . SUP expression
    (21) expression -> expression . INFEG expression
    (22) expression -> expression . SUPFEG expression

    RPAREN          shift and go to state 39
    PLUS            shift and go to state 28
    MINUS           shift and go to state 29
    TIMES           shift and go to state 30
    DIVIDE          shift and go to state 31
    EGALEGAL        shift and go to state 32
    INF             shift and go to state 33
    SUP             shift and go to state 34
    INFEG           shift and go to state 35
    SUPFEG          shift and go to state 36


state 26

    (16) statement -> WHILE LPAREN expression . RPAREN statement
    (6) expression -> expression . PLUS expression
    (7) expression -> expression . MINUS expression
    (8) expression -> expression . TIMES expression
    (9) expression -> expression . DIVIDE expression
    (18) expression -> expression . EGALEGAL expression
    (19) expression -> expression . INF expression
    (20) expression -> expression . SUP expression
    (21) expression -> expression . INFEG expression
    (22) expression -> expression . SUPFEG expression

    RPAREN          shift and go to state 40
    PLUS            shift and go to state 28
    MINUS           shift and go to state 29
    TIMES           shift and go to state 30
    DIVIDE          shift and go to state 31
    EGALEGAL        shift and go to state 32
    INF             shift and go to state 33
    SUP             shift and go to state 34
    INFEG           shift and go to state 35
    SUPFEG          shift and go to state 36


state 27

    (17) statement -> FOR LPAREN statement . SEMICOLON expression SEMICOLON statement RPAREN statement

    SEMICOLON       shift and go to state 41


state 28

    (6) expression -> expression PLUS . expression
    (6) expression -> . expression PLUS expression
    (7) expression -> . expression MINUS expression
    (8) expression -> . expression TIMES expression
    (9) expression -> . expression DIVIDE expression
    (10) expression -> . LPAREN expression RPAREN
    (11) expression -> . NUMBER
    (12) expression -> . NAME
    (18) expression -> . expression EGALEGAL expression
    (19) expression -> . expression INF expression
    (20) expression -> . expression SUP expression
    (21) expression -> . expression INFEG expression
    (22) expression -> . expression SUPFEG expression

    LPAREN          shift and go to state 21
    NUMBER          shift and go to state 22
    NAME            shift and go to state 19

    expression                     shift and go to state 42

state 29

    (7) expression -> expression MINUS . expression
    (6) expression -> . expression PLUS expression
    (7) expression -> . expression MINUS expression
    (8) expression -> . expression TIMES expression
    (9) expression -> . expression DIVIDE expression
    (10) expression -> . LPAREN expression RPAREN
    (11) expression -> . NUMBER
    (12) expression -> . NAME
    (18) expression -> . expression EGALEGAL expression
    (19) expression -> . expression INF expression
    (20) expression -> . expression SUP expression
    (21) expression -> . expression INFEG expression
    (22) expression -> . expression SUPFEG expression

    LPAREN          shift and go to state 21
    NUMBER          shift and go to state 22
    NAME            shift and go to state 19

    expression                     shift and go to state 43

state 30

    (8) expression -> expression TIMES . expression
    (6) expression -> . expression PLUS expression
    (7) expression -> . expression MINUS expression
    (8) expression -> . expression TIMES expression
    (9) expression -> . expression DIVIDE expression
    (10) expression -> . LPAREN expression RPAREN
    (11) expression -> . NUMBER
    (12) expression -> . NAME
    (18) expression -> . expression EGALEGAL expression
    (19) expression -> . expression INF expression
    (20) expression -> . expression SUP expression
    (21) expression -> . expression INFEG expression
    (22) expression -> . expression SUPFEG expression

    LPAREN          shift and go to state 21
    NUMBER          shift and go to state 22
    NAME            shift and go to state 19

    expression                     shift and go to state 44

state 31

    (9) expression -> expression DIVIDE . expression
    (6) expression -> . expression PLUS expression
    (7) expression -> . expression MINUS expression
    (8) expression -> . expression TIMES expression
    (9) expression -> . expression DIVIDE expression
    (10) expression -> . LPAREN expression RPAREN
    (11) expression -> . NUMBER
    (12) expression -> . NAME
    (18) expression -> . expression EGALEGAL expression
    (19) expression -> . expression INF expression
    (20) expression -> . expression SUP expression
    (21) expression -> . expression INFEG expression
    (22) expression -> . expression SUPFEG expression

    LPAREN          shift and go to state 21
    NUMBER          shift and go to state 22
    NAME            shift and go to state 19

    expression                     shift and go to state 45

state 32

    (18) expression -> expression EGALEGAL . expression
    (6) expression -> . expression PLUS expression
    (7) expression -> . expression MINUS expression
    (8) expression -> . expression TIMES expression
    (9) expression -> . expression DIVIDE expression
    (10) expression -> . LPAREN expression RPAREN
    (11) expression -> . NUMBER
    (12) expression -> . NAME
    (18) expression -> . expression EGALEGAL expression
    (19) expression -> . expression INF expression
    (20) expression -> . expression SUP expression
    (21) expression -> . expression INFEG expression
    (22) expression -> . expression SUPFEG expression

    LPAREN          shift and go to state 21
    NUMBER          shift and go to state 22
    NAME            shift and go to state 19

    expression                     shift and go to state 46

state 33

    (19) expression -> expression INF . expression
    (6) expression -> . expression PLUS expression
    (7) expression -> . expression MINUS expression
    (8) expression -> . expression TIMES expression
    (9) expression -> . expression DIVIDE expression
    (10) expression -> . LPAREN expression RPAREN
    (11) expression -> . NUMBER
    (12) expression -> . NAME
    (18) expression -> . expression EGALEGAL expression
    (19) expression -> . expression INF expression
    (20) expression -> . expression SUP expression
    (21) expression -> . expression INFEG expression
    (22) expression -> . expression SUPFEG expression

    LPAREN          shift and go to state 21
    NUMBER          shift and go to state 22
    NAME            shift and go to state 19

    expression                     shift and go to state 47

state 34

    (20) expression -> expression SUP . expression
    (6) expression -> . expression PLUS expression
    (7) expression -> . expression MINUS expression
    (8) expression -> . expression TIMES expression
    (9) expression -> . expression DIVIDE expression
    (10) expression -> . LPAREN expression RPAREN
    (11) expression -> . NUMBER
    (12) expression -> . NAME
    (18) expression -> . expression EGALEGAL expression
    (19) expression -> . expression INF expression
    (20) expression -> . expression SUP expression
    (21) expression -> . expression INFEG expression
    (22) expression -> . expression SUPFEG expression

    LPAREN          shift and go to state 21
    NUMBER          shift and go to state 22
    NAME            shift and go to state 19

    expression                     shift and go to state 48

state 35

    (21) expression -> expression INFEG . expression
    (6) expression -> . expression PLUS expression
    (7) expression -> . expression MINUS expression
    (8) expression -> . expression TIMES expression
    (9) expression -> . expression DIVIDE expression
    (10) expression -> . LPAREN expression RPAREN
    (11) expression -> . NUMBER
    (12) expression -> . NAME
    (18) expression -> . expression EGALEGAL expression
    (19) expression -> . expression INF expression
    (20) expression -> . expression SUP expression
    (21) expression -> . expression INFEG expression
    (22) expression -> . expression SUPFEG expression

    LPAREN          shift and go to state 21
    NUMBER          shift and go to state 22
    NAME            shift and go to state 19

    expression                     shift and go to state 49

state 36

    (22) expression -> expression SUPFEG . expression
    (6) expression -> . expression PLUS expression
    (7) expression -> . expression MINUS expression
    (8) expression -> . expression TIMES expression
    (9) expression -> . expression DIVIDE expression
    (10) expression -> . LPAREN expression RPAREN
    (11) expression -> . NUMBER
    (12) expression -> . NAME
    (18) expression -> . expression EGALEGAL expression
    (19) expression -> . expression INF expression
    (20) expression -> . expression SUP expression
    (21) expression -> . expression INFEG expression
    (22) expression -> . expression SUPFEG expression

    LPAREN          shift and go to state 21
    NUMBER          shift and go to state 22
    NAME            shift and go to state 19

    expression                     shift and go to state 50

state 37

    (10) expression -> LPAREN expression . RPAREN
    (6) expression -> expression . PLUS expression
    (7) expression -> expression . MINUS expression
    (8) expression -> expression . TIMES expression
    (9) expression -> expression . DIVIDE expression
    (18) expression -> expression . EGALEGAL expression
    (19) expression -> expression . INF expression
    (20) expression -> expression . SUP expression
    (21) expression -> expression . INFEG expression
    (22) expression -> expression . SUPFEG expression

    RPAREN          shift and go to state 51
    PLUS            shift and go to state 28
    MINUS           shift and go to state 29
    TIMES           shift and go to state 30
    DIVIDE          shift and go to state 31
    EGALEGAL        shift and go to state 32
    INF             shift and go to state 33
    SUP             shift and go to state 34
    INFEG           shift and go to state 35
    SUPFEG          shift and go to state 36


state 38

    (5) statement -> PRINT LPAREN expression RPAREN .

    SEMICOLON       reduce using rule 5 (statement -> PRINT LPAREN expression RPAREN .)
    ELSE            reduce using rule 5 (statement -> PRINT LPAREN expression RPAREN .)
    RPAREN          reduce using rule 5 (statement -> PRINT LPAREN expression RPAREN .)


state 39

    (14) statement -> IF LPAREN expression RPAREN . statement
    (15) statement -> IF LPAREN expression RPAREN . statement ELSE statement
    (4) statement -> . NAME EGAL expression
    (5) statement -> . PRINT LPAREN expression RPAREN
    (13) statement -> . LACC bloc RACC
    (14) statement -> . IF LPAREN expression RPAREN statement
    (15) statement -> . IF LPAREN expression RPAREN statement ELSE statement
    (16) statement -> . WHILE LPAREN expression RPAREN statement
    (17) statement -> . FOR LPAREN statement SEMICOLON expression SEMICOLON statement RPAREN statement

    NAME            shift and go to state 4
    PRINT           shift and go to state 5
    LACC            shift and go to state 6
    IF              shift and go to state 7
    WHILE           shift and go to state 8
    FOR             shift and go to state 9

    statement                      shift and go to state 52

state 40

    (16) statement -> WHILE LPAREN expression RPAREN . statement
    (4) statement -> . NAME EGAL expression
    (5) statement -> . PRINT LPAREN expression RPAREN
    (13) statement -> . LACC bloc RACC
    (14) statement -> . IF LPAREN expression RPAREN statement
    (15) statement -> . IF LPAREN expression RPAREN statement ELSE statement
    (16) statement -> . WHILE LPAREN expression RPAREN statement
    (17) statement -> . FOR LPAREN statement SEMICOLON expression SEMICOLON statement RPAREN statement

    NAME            shift and go to state 4
    PRINT           shift and go to state 5
    LACC            shift and go to state 6
    IF              shift and go to state 7
    WHILE           shift and go to state 8
    FOR             shift and go to state 9

    statement                      shift and go to state 53

state 41

    (17) statement -> FOR LPAREN statement SEMICOLON . expression SEMICOLON statement RPAREN statement
    (6) expression -> . expression PLUS expression
    (7) expression -> . expression MINUS expression
    (8) expression -> . expression TIMES expression
    (9) expression -> . expression DIVIDE expression
    (10) expression -> . LPAREN expression RPAREN
    (11) expression -> . NUMBER
    (12) expression -> . NAME
    (18) expression -> . expression EGALEGAL expression
    (19) expression -> . expression INF expression
    (20) expression -> . expression SUP expression
    (21) expression -> . expression INFEG expression
    (22) expression -> . expression SUPFEG expression

    LPAREN          shift and go to state 21
    NUMBER          shift and go to state 22
    NAME            shift and go to state 19

    expression                     shift and go to state 54

state 42

    (6) expression -> expression PLUS expression .
    (6) expression -> expression . PLUS expression
    (7) expression -> expression . MINUS expression
    (8) expression -> expression . TIMES expression
    (9) expression -> expression . DIVIDE expression
    (18) expression -> expression . EGALEGAL expression
    (19) expression -> expression . INF expression
    (20) expression -> expression . SUP expression
    (21) expression -> expression . INFEG expression
    (22) expression -> expression . SUPFEG expression

    PLUS            reduce using rule 6 (expression -> expression PLUS expression .)
    MINUS           reduce using rule 6 (expression -> expression PLUS expression .)
    EGALEGAL        reduce using rule 6 (expression -> expression PLUS expression .)
    INF             reduce using rule 6 (expression -> expression PLUS expression .)
    SUP             reduce using rule 6 (expression -> expression PLUS expression .)
    INFEG           reduce using rule 6 (expression -> expression PLUS expression .)
    SUPFEG          reduce using rule 6 (expression -> expression PLUS expression .)
    SEMICOLON       reduce using rule 6 (expression -> expression PLUS expression .)
    ELSE            reduce using rule 6 (expression -> expression PLUS expression .)
    RPAREN          reduce using rule 6 (expression -> expression PLUS expression .)
    TIMES           shift and go to state 30
    DIVIDE          shift and go to state 31

  ! TIMES           [ reduce using rule 6 (expression -> expression PLUS expression .) ]
  ! DIVIDE          [ reduce using rule 6 (expression -> expression PLUS expression .) ]
  ! PLUS            [ shift and go to state 28 ]
  ! MINUS           [ shift and go to state 29 ]
  ! EGALEGAL        [ shift and go to state 32 ]
  ! INF             [ shift and go to state 33 ]
  ! SUP             [ shift and go to state 34 ]
  ! INFEG           [ shift and go to state 35 ]
  ! SUPFEG          [ shift and go to state 36 ]


state 43

    (7) expression -> expression MINUS expression .
    (6) expression -> expression . PLUS expression
    (7) expression -> expression . MINUS expression
    (8) expression -> expression . TIMES expression
    (9) expression -> expression . DIVIDE expression
    (18) expression -> expression . EGALEGAL expression
    (19) expression -> expression . INF expression
    (20) expression -> expression . SUP expression
    (21) expression -> expression . INFEG expression
    (22) expression -> expression . SUPFEG expression
